enhanced io test